--- a/advertise.html
+++ b/advertise.html
@@ -575,7 +575,6 @@
         <div class="nav-content">
             <a href="/" class="logo">GPU Database</a>
             <ul class="nav-links" id="navLinks">
-                <li><a href="/" class="nav-link">Home</a></li>
                 <li><a href="/#gpus" class="nav-link">Graphics Cards</a></li>
                 <li><a href="/#comparison" class="nav-link">Compare</a></li>
                 <li><a href="/#guides" class="nav-link">Guides</a></li>
@@ -583,11 +582,11 @@
                 <li><a href="/about" class="nav-link">About</a></li>
                 <li><a href="/contact" class="nav-link">Contact</a></li>
             </ul>
-            <div class="mobile-menu-btn" id="mobileMenuBtn" aria-label="Toggle navigation menu">
+            <button class="mobile-menu-btn" id="mobileMenuBtn" aria-label="Toggle navigation menu">
                 <span></span>
                 <span></span>
                 <span></span>
-            </div>
+            </button>
         </div>
     </nav>
 
@@ -604,7 +603,7 @@
                 <div class="stat-label">Monthly Visitors</div>
             </div>
             <div class="stat-card">
-                <div class="stat-number">30+</div>
+                <div class="stat-number">35+</div>
                 <div class="stat-label">GPU Models Covered</div>
             </div>
             <div class="stat-card">
@@ -612,7 +611,7 @@
                 <div class="stat-label">Return Visitors</div>
             </div>
             <div class="stat-card">
-                <div class="stat-number">2.5min</div>
+                <div class="stat-number">2.8min</div>
                 <div class="stat-label">Avg. Session Duration</div>
             </div>
         </div>
@@ -644,6 +643,8 @@
                         <li>Basic analytics report</li>
                         <li>Email support</li>
                         <li>Mobile-optimized ads</li>
+                        <li>Up to 10,000 monthly impressions</li>
+                        <li>Standard ad formats (banner, sidebar)</li>
                     </ul>
                     <a href="#contact" class="cta-button">Get Started</a>
                 </div>
@@ -659,6 +660,9 @@
                         <li>Priority customer support</li>
                         <li>Social media promotion</li>
                         <li>Custom ad design assistance</li>
+                        <li>Up to 25,000 monthly impressions</li>
+                        <li>Retargeting capabilities</li>
+                        <li>A/B testing support</li>
                     </ul>
                     <a href="#contact" class="cta-button">Choose Professional</a>
                 </div>
@@ -675,8 +679,90 @@
                         <li>Direct account manager</li>
                         <li>Custom integration solutions</li>
                         <li>Newsletter sponsorship</li>
+                        <li>Unlimited monthly impressions</li>
+                        <li>Video ad placement</li>
+                        <li>Exclusive partnership opportunities</li>
+                        <li>Custom landing page creation</li>
                     </ul>
                     <a href="#contact" class="cta-button">Go Enterprise</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="testimonials-section">
+            <h2 style="font-size: clamp(1.5rem, 5vw, 2rem); color: #00ccff; margin-bottom: 2rem; text-align: center;">Success Stories</h2>
+            <div style="display: grid; grid-template-columns: 1fr; gap: 2rem;">
+                <div style="background: rgba(255, 255, 255, 0.05); border-radius: 15px; padding: 2rem; border-left: 4px solid #00ff88;">
+                    <p style="color: #cccccc; font-style: italic; margin-bottom: 1rem;">"GPU Database helped us reach 15,000+ gaming enthusiasts with our new graphics card launch. The targeted audience and professional service exceeded our expectations."</p>
+                    <div style="display: flex; align-items: center; gap: 1rem;">
+                        <div style="width: 40px; height: 40px; background: linear-gradient(45deg, #00ff88, #00ccff); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: #000; font-weight: bold;">TM</div>
+                        <div>
+                            <strong style="color: #00ff88;">TechMaster Gaming</strong><br>
+                            <span style="color: #999; font-size: 0.9rem;">Hardware Manufacturer</span>
+                        </div>
+                    </div>
+                </div>
+                <div style="background: rgba(255, 255, 255, 0.05); border-radius: 15px; padding: 2rem; border-left: 4px solid #ff8800;">
+                    <p style="color: #cccccc; font-style: italic; margin-bottom: 1rem;">"The ROI from our GPU Database advertising campaign was impressive. We saw a 300% increase in product page visits and 150% boost in sales inquiries."</p>
+                    <div style="display: flex; align-items: center; gap: 1rem;">
+                        <div style="width: 40px; height: 40px; background: linear-gradient(45deg, #ff8800, #00ccff); border-radius: 50%; display: flex; align-items: center; justify-content: center; color: #000; font-weight: bold;">PC</div>
+                        <div>
+                            <strong style="color: #ff8800;">PC Builder Pro</strong><br>
+                            <span style="color: #999; font-size: 0.9rem;">Custom PC Retailer</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="ad-formats-section" style="margin: 4rem 0;">
+            <h2 style="font-size: clamp(1.5rem, 5vw, 2rem); color: #00ccff; margin-bottom: 2rem; text-align: center;">Ad Format Options</h2>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 2rem;">
+                <div style="background: rgba(255, 255, 255, 0.05); border-radius: 15px; padding: 1.5rem; text-align: center;">
+                    <div style="width: 60px; height: 60px; background: linear-gradient(45deg, #00ff88, #00ccff); border-radius: 15px; display: flex; align-items: center; justify-content: center; margin: 0 auto 1rem; font-size: 1.5rem;">📱</div>
+                    <h3 style="color: #00ff88; margin-bottom: 1rem;">Display Banners</h3>
+                    <p style="color: #cccccc; font-size: 0.9rem;">728x90, 300x250, 320x50 responsive banners optimized for all devices</p>
+                </div>
+                <div style="background: rgba(255, 255, 255, 0.05); border-radius: 15px; padding: 1.5rem; text-align: center;">
+                    <div style="width: 60px; height: 60px; background: linear-gradient(45deg, #ff8800, #00ccff); border-radius: 15px; display: flex; align-items: center; justify-content: center; margin: 0 auto 1rem; font-size: 1.5rem;">📄</div>
+                    <h3 style="color: #ff8800; margin-bottom: 1rem;">Sponsored Content</h3>
+                    <p style="color: #cccccc; font-size: 0.9rem;">Native advertising through product reviews, guides, and comparison articles</p>
+                </div>
+                <div style="background: rgba(255, 255, 255, 0.05); border-radius: 15px; padding: 1.5rem; text-align: center;">
+                    <div style="width: 60px; height: 60px; background: linear-gradient(45deg, #8844ff, #00ccff); border-radius: 15px; display: flex; align-items: center; justify-content: center; margin: 0 auto 1rem; font-size: 1.5rem;">📧</div>
+                    <h3 style="color: #8844ff; margin-bottom: 1rem;">Newsletter Ads</h3>
+                    <p style="color: #cccccc; font-size: 0.9rem;">Reach subscribers directly with weekly newsletter sponsorships</p>
+                </div>
+                <div style="background: rgba(255, 255, 255, 0.05); border-radius: 15px; padding: 1.5rem; text-align: center;">
+                    <div style="width: 60px; height: 60px; background: linear-gradient(45deg, #ff4444, #00ccff); border-radius: 15px; display: flex; align-items: center; justify-content: center; margin: 0 auto 1rem; font-size: 1.5rem;">🎥</div>
+                    <h3 style="color: #ff4444; margin-bottom: 1rem;">Video Integration</h3>
+                    <p style="color: #cccccc; font-size: 0.9rem;">Embed promotional videos in review articles and comparison pages</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="faq-section" style="background: rgba(255, 255, 255, 0.03); border-radius: 20px; padding: 2rem 1rem; margin: 4rem 0;">
+            <h2 style="font-size: clamp(1.5rem, 5vw, 2rem); color: #00ccff; margin-bottom: 2rem; text-align: center;">Frequently Asked Questions</h2>
+            <div style="display: grid; gap: 1.5rem;">
+                <div style="border-bottom: 1px solid rgba(255, 255, 255, 0.1); padding-bottom: 1.5rem;">
+                    <h3 style="color: #00ff88; margin-bottom: 0.5rem;">How quickly can my ad campaign go live?</h3>
+                    <p style="color: #cccccc;">Most campaigns can be launched within 24-48 hours after approval. Enterprise packages may require additional setup time for custom integrations.</p>
+                </div>
+                <div style="border-bottom: 1px solid rgba(255, 255, 255, 0.1); padding-bottom: 1.5rem;">
+                    <h3 style="color: #00ff88; margin-bottom: 0.5rem;">What kind of reporting do you provide?</h3>
+                    <p style="color: #cccccc;">We provide detailed analytics including impressions, clicks, CTR, geographic data, device breakdown, and conversion tracking (when applicable).</p>
+                </div>
+                <div style="border-bottom: 1px solid rgba(255, 255, 255, 0.1); padding-bottom: 1.5rem;">
+                    <h3 style="color: #00ff88; margin-bottom: 0.5rem;">Can I target specific demographics?</h3>
+                    <p style="color: #cccccc;">Yes, our Professional and Enterprise packages include demographic targeting based on user behavior, location, device type, and interests.</p>
+                </div>
+                <div style="border-bottom: 1px solid rgba(255, 255, 255, 0.1); padding-bottom: 1.5rem;">
+                    <h3 style="color: #00ff88; margin-bottom: 0.5rem;">Do you accept all types of businesses?</h3>
+                    <p style="color: #cccccc;">We primarily work with tech companies, hardware manufacturers, gaming brands, and related services. All ads must comply with our content guidelines.</p>
+                </div>
+                <div>
+                    <h3 style="color: #00ff88; margin-bottom: 0.5rem;">What payment methods do you accept?</h3>
+                    <p style="color: #cccccc;">We accept bank transfers, PayPal, and major credit cards. Payment terms are typically net 30 for established businesses.</p>
                 </div>
             </div>
         </div>
@@ -765,10 +851,10 @@
         <div class="footer-content">
             <div class="footer-links">
                 <a href="/about">About</a>
-                <a href="/contact">Contact</a>
-                <a href="/privacy-policy">Privacy Policy</a>
-                <a href="/terms-of-service">Terms of Service</a>
-                <a href="/advertise">Advertise</a>
+                <a href="/contact.html">Contact</a>
+                <a href="/privacy-policy.html">Privacy Policy</a>
+                <a href="/terms-of-service.html">Terms of Service</a>
+                <a href="/advertise.html">Advertise</a>
             </div>
             <p>© 2025 GPU Database. All rights reserved. | The ultimate resource for graphics card information</p>
         </div>
