--- a/contact.html
+++ b/contact.html
@@ -516,7 +516,6 @@
         <div class="nav-content">
             <a href="/" class="logo">GPU Database</a>
             <ul class="nav-links" id="navLinks">
-                <li><a href="/" class="nav-link">Home</a></li>
                 <li><a href="/#gpus" class="nav-link">Graphics Cards</a></li>
                 <li><a href="/#comparison" class="nav-link">Compare</a></li>
                 <li><a href="/#guides" class="nav-link">Guides</a></li>
@@ -648,10 +647,10 @@
         <div class="footer-content">
             <div class="footer-links">
                 <a href="/about">About</a>
-                <a href="/contact">Contact</a>
-                <a href="/privacy-policy">Privacy Policy</a>
-                <a href="/terms-of-service">Terms of Service</a>
-                <a href="/advertise">Advertise</a>
+                <a href="/contact.html">Contact</a>
+                <a href="/privacy-policy.html">Privacy Policy</a>
+                <a href="/terms-of-service.html">Terms of Service</a>
+                <a href="/advertise.html">Advertise</a>
             </div>
             <p>© 2025 GPU Database. All rights reserved. | The ultimate resource for graphics card information</p>
         </div>
