--- a/about/index.html
+++ b/about/index.html
@@ -39,7 +39,7 @@
         "email": "gouravchoudharyofficial@gmail.com",
         "telephone": "+91-8955622948",
         "sameAs": [
-            "https://www.instagram.com/itz_gourav_choudhary65"
+            "https://www.instagram.com/itz_gourav_choudhary09"
         ]
     }
     </script>
@@ -435,7 +435,6 @@
         <div class="nav-content">
             <a href="/" class="logo">GPU Database</a>
             <ul class="nav-links" id="navLinks">
-                <li><a href="/" class="nav-link">Home</a></li>
                 <li><a href="/#gpus" class="nav-link">Graphics Cards</a></li>
                 <li><a href="/#comparison" class="nav-link">Compare</a></li>
                 <li><a href="/#guides" class="nav-link">Guides</a></li>
@@ -443,11 +442,11 @@
                 <li><a href="/about" class="nav-link active">About</a></li>
                 <li><a href="/contact" class="nav-link">Contact</a></li>
             </ul>
-            <div class="mobile-menu-btn" id="mobileMenuBtn" aria-label="Toggle navigation menu">
+            <button class="mobile-menu-btn" id="mobileMenuBtn" aria-label="Toggle navigation menu">
                 <span></span>
                 <span></span>
                 <span></span>
-            </div>
+            </button>
         </div>
     </nav>
 
@@ -523,10 +522,10 @@
         <div class="footer-content">
             <div class="footer-links">
                 <a href="/about">About</a>
-                <a href="/contact">Contact</a>
-                <a href="/privacy-policy">Privacy Policy</a>
-                <a href="/terms-of-service">Terms of Service</a>
-                <a href="/advertise">Advertise</a>
+                <a href="/contact.html">Contact</a>
+                <a href="/privacy-policy.html">Privacy Policy</a>
+                <a href="/terms-of-service.html">Terms of Service</a>
+                <a href="/advertise.html">Advertise</a>
             </div>
             <p>© 2025 GPU Database. All rights reserved. | The ultimate resource for 35+ graphics card models with comprehensive specs and performance data</p>
         </div>
